# tello_ros2_packages

./: .gitignore  LICENSE.txt  README.md
src/tello_control/: CMakeLists.txt  package.xml
src/tello_control/launch/: keyboard_teleop_1_launch.py  keyboard_teleop_2_launch.py  keyboard_teleop_two_drones_launch.py
src/tello_control/src/: distributed_formation_control.py  keyboard_teleop.py  land_simu.py  reference_state_rendezvous.py  rendezvous.py  run_algorithm.py  single_tragetory.py  takeoff_simu.py  tello_controller.py
src/tello_description/: package.xml
src/tello_description/urdf/: tello.xml
src/tello_gazebo/: CMakeLists.txt  package.xml
src/tello_gazebo/launch/: multiple_drones.launch.py  multiple_drones_launch.py
src/tello_gazebo/src/: inject_entity.py  tello_plugin.cpp
src/tello_msgs/: CMakeLists.txt  package.xml
src/tello_msgs/msg/: TelloStatus.msg
src/tello_py_driver/: CMakeLists.txt  package.xml
src/tello_py_driver/launch/: driver_1_launch.py  driver_2_launch.py  two_drones_no_video_launch.py  two_drones_video_launch.py
src/tello_py_driver/src/: battery.py  fly_test.py  fly_test2.py  land.py  tello_interface.py  tello_ros2_driver.py  videotest.py
